--- a/workloads/podinfo-hpa.yaml
+++ b/workloads/podinfo-hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: podinfo
-  namespace: fluxapp
+  namespace: autoapply
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
