--- a/workloads/podinfo-svc.yaml
+++ b/workloads/podinfo-svc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: podinfo
-  namespace: fluxapp
+  namespace: autoapply
   labels:
     app: podinfo
 spec:
